--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ connectivity = "1.1.0"
 android-minSdk = "24"
 android-compileSdk = "34"
 lifecycleViewmodelCompose = "2.8.0"
+startupRuntime = "1.2.0"
 
 [libraries]
 apimanager = { module = "com.github.N7ghtm4r3:APIManager", version.ref = "apimanager" }
@@ -18,6 +19,7 @@ connectivity-compose-device = { module = "dev.jordond.connectivity:connectivity-
 equinox = { module = "io.github.n7ghtm4r3:Equinox", version.ref = "equinox" }
 json = { module = "org.json:json", version.ref = "json" }
 lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startupRuntime" }
 
 [plugins]
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
